Adjust runit template to source rvm first

--- a/files/default/foreman/runit/run.erb
+++ b/files/default/foreman/runit/run.erb
@@ -1,4 +1,5 @@
-#!/bin/sh
-cd <%= engine.directory %>
+#!/bin/bash
+source /srv/<%= user %>/.rvm/scripts/rvm
+cd <%= engine.root %>
 export $(cat .env)
 exec <%= process.command %>
