Update homedir for user run template

--- a/templates/default/sv-user-run.erb
+++ b/templates/default/sv-user-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh -e
 exec 2>&1 \
-  sudo -H -u <%= @options[:user] %> runsvdir -P /home/<%= @options[:user] %>/service 'log:.........................................................................................................'
+  sudo -H -u <%= @options[:user] %> runsvdir -P /srv/<%= @options[:user] %>/service 'log:.........................................................................................................'
