--- a/templates/default/nginx_vhost.conf.erb
+++ b/templates/default/nginx_vhost.conf.erb
@@ -13,6 +13,11 @@ upstream <%= app_name %> {
   server <%= upstream_server %> fail_timeout=0;
 }
 
+map $request_uri $request_key {
+  default "";
+  ~^/(?P<key>.+)$ $key;
+}
+
 server {
   server_name <%= Array(host_name).join(' ') %>;
 <% Array(http_port).each do |port| -%>
