--- a/templates/default/nginx_vhost.conf.erb
+++ b/templates/default/nginx_vhost.conf.erb
@@ -47,7 +47,7 @@ server {
   client_max_body_size 4G;
 
   location / {
-  <% if password_protect -%>
+  <% if http_auth -%>
     auth_basic "Restricted";
     auth_basic_user_file <%= app_name %>_htpasswd;
 
